Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -156,11 +156,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Luke Kang'"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "name=\"Luke Kang\""
+    "name=\"Luke Kang\"\n",
+    "name"
    ]
   },
   {
