--- a/index.ipynb
+++ b/index.ipynb
@@ -184,22 +184,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'Art Vandelay'"
+       "'Luke Kang'"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "name = 'Art Vandelay'\n",
     "name"
    ]
   },
